--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@next/mdx": "^14.2.28",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.2.2",
@@ -42,6 +44,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-auto-scroll": "^8.1.8",
     "embla-carousel-react": "^8.0.2",
+    "entities": "^6.0.1",
     "framer-motion": "^11.0.24",
     "geist": "^1.3.1",
     "grapheme-splitter": "^1.0.4",
@@ -55,6 +58,7 @@
     "next-safe-action": "^7.9.3",
     "next-themes": "^0.3.0",
     "next-transition-router": "^0.2.1",
+    "parse5": "^8.0.0",
     "prisma": "^6.7.0",
     "react": "^18",
     "react-dom": "^18",
